manifests/mlflow/base/mlflow-route.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mlflow
  labels:
    app.kubernetes.io/name: mlflow
  annotations:
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/certificate-arn: $(ACM_ARN)
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 80}, {"HTTPS":443}]'
    alb.ingress.kubernetes.io/ssl-redirect: '443'
    alb.ingress.kubernetes.io/healthcheck-path: /health/ready
    alb.ingress.kubernetes.io/success-codes: '200'
spec:
  ingressClassName: mlops-ingress-class
  rules:
  - host: $(MLFLOW_HOST)
    http:
      paths:
      - backend:
          service:
            name: mlflow
            port:
              number: 5000
        path: /
        pathType: ImplementationSpecific      



---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  annotations:
    openshift.io/host.generated: 'true'
  name: mlflow
  labels:
    app: mlflow
spec:
  to:
    kind: Service
    name: mlflow
    weight: 100
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: None
  wildcardPolicy: None
